src/.antlr/ASGrammarParser.java
// Generated from /Users/gavinbutler/Documents/checkRequestAS/src/ASGrammar.g4 by ANTLR 4.8
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class ASGrammarParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.8", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, T__20=21, T__21=22, T__22=23, T__23=24, 
		T__24=25, T__25=26, T__26=27, T__27=28, T__28=29, T__29=30, T__30=31, 
		T__31=32, T__32=33, T__33=34, T__34=35, T__35=36, T__36=37, T__37=38, 
		T__38=39, T__39=40, T__40=41, T__41=42, T__42=43, T__43=44, T__44=45, 
		T__45=46, T__46=47, T__47=48, T__48=49, T__49=50, T__50=51, T__51=52, 
		T__52=53, T__53=54, T__54=55, T__55=56, T__56=57, T__57=58, T__58=59, 
		T__59=60, T__60=61, T__61=62, T__62=63, T__63=64, T__64=65, T__65=66, 
		T__66=67, T__67=68, T__68=69, T__69=70, T__70=71, T__71=72, T__72=73, 
		T__73=74, T__74=75, T__75=76, T__76=77, T__77=78, T__78=79, T__79=80, 
		T__80=81, T__81=82, T__82=83, T__83=84, T__84=85, T__85=86, T__86=87, 
		T__87=88, T__88=89, T__89=90, T__90=91, T__91=92, T__92=93, WHITESPACE=94, 
		SingleLineComment=95, MultiLineComment=96, BOOLEAN=97, STRING=98, FLOAT=99, 
		INTEGER=100, IDENTIFIER=101;
	public static final int
		RULE_program = 0, RULE_delay = 1, RULE_count = 2, RULE_copy = 3, RULE_error = 4, 
		RULE_click = 5, RULE_openLocation = 6, RULE_activate = 7, RULE_openFile = 8, 
		RULE_save = 9, RULE_keystroke = 10, RULE_using = 11, RULE_loopStatement = 12, 
		RULE_repeatLoop = 13, RULE_whileLoop = 14, RULE_exit = 15, RULE_tell = 16, 
		RULE_tellApp = 17, RULE_tellArg = 18, RULE_appType = 19, RULE_tellId = 20, 
		RULE_exists = 21, RULE_ifBlock = 22, RULE_elseIf = 23, RULE_elseStatement = 24, 
		RULE_ifStatement = 25, RULE_toStatement = 26, RULE_statementList = 27, 
		RULE_returnStatement = 28, RULE_statement = 29, RULE_parameterList = 30, 
		RULE_onRun = 31, RULE_functionDeclaration = 32, RULE_functionBody = 33, 
		RULE_functionCall = 34, RULE_arguments = 35, RULE_range = 36, RULE_operator = 37, 
		RULE_set = 38, RULE_setProperty = 39, RULE_listener = 40, RULE_errorHandler = 41, 
		RULE_operation = 42, RULE_expression = 43, RULE_value = 44, RULE_withProperties = 45, 
		RULE_makeNew = 46, RULE_variable = 47, RULE_modifier = 48, RULE_property = 49, 
		RULE_record = 50, RULE_list = 51, RULE_basicData = 52, RULE_missingValue = 53, 
		RULE_displayDialog = 54;
	private static String[] makeRuleNames() {
		return new String[] {
			"program", "delay", "count", "copy", "error", "click", "openLocation", 
			"activate", "openFile", "save", "keystroke", "using", "loopStatement", 
			"repeatLoop", "whileLoop", "exit", "tell", "tellApp", "tellArg", "appType", 
			"tellId", "exists", "ifBlock", "elseIf", "elseStatement", "ifStatement", 
			"toStatement", "statementList", "returnStatement", "statement", "parameterList", 
			"onRun", "functionDeclaration", "functionBody", "functionCall", "arguments", 
			"range", "operator", "set", "setProperty", "listener", "errorHandler", 
			"operation", "expression", "value", "withProperties", "makeNew", "variable", 
			"modifier", "property", "record", "list", "basicData", "missingValue", 
			"displayDialog"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'delay'", "'count'", "'of'", "'copy'", "'to'", "'error'", "'number'", 
			"'click'", "'open'", "'location'", "'activate'", "'file'", "'save'", 
			"'keystroke'", "'('", "'character'", "'id'", "')'", "'using'", "'repeat'", 
			"'with'", "'from'", "'in'", "'until'", "'by'", "'end'", "'while'", "'then'", 
			"'exit'", "'tell'", "'process'", "'application'", "'exists'", "'if'", 
			"'else'", "'return'", "'on'", "'run'", "','", "'+'", "'-'", "'*'", "'/'", 
			"'mod'", "'^'", "'!='", "'is'", "'not'", "'='", "'equal'", "'>'", "'<'", 
			"'>='", "'<='", "'&'", "'and'", "'or'", "'contains'", "'whose'", "'where'", 
			"'set'", "'property'", "':'", "'listener'", "'idle'", "'quit'", "'try'", 
			"'value'", "'text'", "'returned'", "'display'", "'dialog'", "'default'", 
			"'answer'", "'thru'", "'properties'", "'make'", "'new'", "'after'", "'last'", 
			"'at'", "'as'", "'get'", "'menu'", "'bar'", "'button'", "'item'", "'the'", 
			"'body'", "'{'", "'}'", "'missing'", "'buttons'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, "WHITESPACE", 
			"SingleLineComment", "MultiLineComment", "BOOLEAN", "STRING", "FLOAT", 
			"INTEGER", "IDENTIFIER"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "ASGrammar.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public ASGrammarParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class ProgramContext extends ParserRuleContext {
		public TerminalNode EOF() { return getToken(ASGrammarParser.EOF, 0); }
		public List<StatementContext> statement() {
			return getRuleContexts(StatementContext.class);
		}
		public StatementContext statement(int i) {
			return getRuleContext(StatementContext.class,i);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(113);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__0) | (1L << T__3) | (1L << T__5) | (1L << T__7) | (1L << T__8) | (1L << T__10) | (1L << T__12) | (1L << T__13) | (1L << T__19) | (1L << T__26) | (1L << T__28) | (1L << T__29) | (1L << T__33) | (1L << T__35) | (1L << T__36) | (1L << T__60))) != 0) || ((((_la - 67)) & ~0x3f) == 0 && ((1L << (_la - 67)) & ((1L << (T__66 - 67)) | (1L << (T__70 - 67)) | (1L << (T__76 - 67)) | (1L << (IDENTIFIER - 67)))) != 0)) {
				{
				{
				setState(110);
				statement();
				}
				}
				setState(115);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(116);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DelayContext extends ParserRuleContext {
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public DelayContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_delay; }
	}

	public final DelayContext delay() throws RecognitionException {
		DelayContext _localctx = new DelayContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_delay);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(118);
			match(T__0);
			setState(119);
			expression();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class CountContext extends ParserRuleContext {
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public CountContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_count; }
	}

	public final CountContext count() throws RecognitionException {
		CountContext _localctx = new CountContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_count);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(121);
			match(T__1);
			setState(123);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==T__2) {
				{
				setState(122);
				match(T__2);
				}
			}

			setState(125);
			expression();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class CopyContext extends ParserRuleContext {
		public OperationContext operation() {
			return getRuleContext(OperationContext.class,0);
		}
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public CopyContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_copy; }
	}

	public final CopyContext copy() throws RecognitionException {
		CopyContext _localctx = new CopyContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_copy);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(127);
			match(T__3);
			setState(128);
			operation();
			setState(129);
			match(T__4);
			setState(130);
			expression();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ErrorContext extends ParserRuleContext {
		public List<ExpressionContext> expression() {
			return getRuleContexts(ExpressionContext.class);
		}
		public ExpressionContext expression(int i) {
			return getRuleContext(ExpressionContext.class,i);
		}
		public ErrorContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_error; }
	}

	public final ErrorContext error() throws RecognitionException {
		ErrorContext _localctx = new ErrorContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_error);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(132);
			match(T__5);
			setState(133);
			expression();
			setState(136);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==T__6) {
				{
				setState(134);
				match(T__6);
				setState(135);
				expression();
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ClickContext extends ParserRuleContext {
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public ClickContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_click; }
	}

	public final ClickContext click() throws RecognitionException {
		ClickContext _localctx = new ClickContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_click);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(138);
			match(T__7);
			setState(140);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,3,_ctx) ) {
			case 1:
				{
				setState(139);
				expression();
				}
				break;
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class OpenLocationContext extends ParserRuleContext {
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public OpenLocationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_openLocation; }
	}

	public final OpenLocationContext openLocation() throws RecognitionException {
		OpenLocationContext _localctx = new OpenLocationContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_openLocation);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(142);
			match(T__8);
			setState(143);
			match(T__9);
			setState(144);
			expression();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ActivateContext extends ParserRuleContext {
		public ActivateContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_activate; }
	}

	public final ActivateContext activate() throws RecognitionException {
		ActivateContext _localctx = new ActivateContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_activate);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(146);
			match(T__10);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class OpenFileContext extends ParserRuleContext {
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public OpenFileContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_openFile; }
	}

	public final OpenFileContext openFile() throws RecognitionException {
		OpenFileContext _localctx = new OpenFileContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_openFile);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(148);
			match(T__8);
			setState(149);
			match(T__11);
			setState(150);
			expression();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SaveContext extends ParserRuleContext {
		public SaveContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_save; }
	}

	public final SaveContext save() throws RecognitionException {
		SaveContext _localctx = new SaveContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_save);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(152);
			match(T__12);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class KeystrokeContext extends ParserRuleContext {
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public UsingContext using() {
			return getRuleContext(UsingContext.class,0);
		}
		public KeystrokeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_keystroke; }
	}

	public final KeystrokeContext keystroke() throws RecognitionException {
		KeystrokeContext _localctx = new KeystrokeContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_keystroke);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(154);
			match(T__13);
			setState(162);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,4,_ctx) ) {
			case 1:
				{
				setState(155);
				expression();
				}
				break;
			case 2:
				{
				{
				setState(156);
				match(T__14);
				setState(157);
				match(T__15);
				setState(158);
				match(T__16);
				setState(159);
				expression();
				setState(160);
				match(T__17);
				}
				}
				break;
			}
			setState(165);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==T__18) {
				{
				setState(164);
				using();
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class UsingContext extends ParserRuleContext {
		public ListContext list() {
			return getRuleContext(ListContext.class,0);
		}
		public UsingContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_using; }
	}

	public final UsingContext using() throws RecognitionException {
		UsingContext _localctx = new UsingContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_using);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(167);
			match(T__18);
			setState(168);
			list();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class LoopStatementContext extends ParserRuleContext {
		public RepeatLoopContext repeatLoop() {
			return getRuleContext(RepeatLoopContext.class,0);
		}
		public WhileLoopContext whileLoop() {
			return getRuleContext(WhileLoopContext.class,0);
		}
		public LoopStatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_loopStatement; }
	}

	public final LoopStatementContext loopStatement() throws RecognitionException {
		LoopStatementContext _localctx = new LoopStatementContext(_ctx, getState());
		enterRule(_localctx, 24, RULE_loopStatement);
		try {
			setState(172);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__19:
				enterOuterAlt(_localctx, 1);
				{
				setState(170);
				repeatLoop();
				}
				break;
			case T__26:
				enterOuterAlt(_localctx, 2);
				{
				setState(171);
				whileLoop();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class RepeatLoopContext extends ParserRuleContext {
		public StatementListContext statementList() {
			return getRuleContext(StatementListContext.class,0);
		}
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public RangeContext range() {
			return getRuleContext(RangeContext.class,0);
		}
		public VariableContext variable() {
			return getRuleContext(VariableContext.class,0);
		}
		public RepeatLoopContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_repeatLoop; }
	}

	public final RepeatLoopContext repeatLoop() throws RecognitionException {
		RepeatLoopContext _localctx = new RepeatLoopContext(_ctx, getState());
		enterRule(_localctx, 26, RULE_repeatLoop);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(174);
			match(T__19);
			setState(192);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__20:
				{
				{
				setState(175);
				match(T__20);
				setState(176);
				expression();
				setState(181);
				_errHandler.sync(this);
				switch (_input.LA(1)) {
				case T__21:
					{
					setState(177);
					match(T__21);
					setState(178);
					range();
					}
					break;
				case T__22:
					{
					setState(179);
					match(T__22);
					setState(180);
					variable();
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				}
				break;
			case T__23:
				{
				{
				setState(183);
				match(T__23);
				setState(184);
				expression();
				}
				}
				break;
			case T__21:
				{
				{
				setState(185);
				match(T__21);
				setState(186);
				range();
				setState(189);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==T__24) {
					{
					setState(187);
					match(T__24);
					setState(188);
					expression();
					}
				}

				}
				}
				break;
			case T__1:
			case T__6:
			case T__14:
			case T__16:
			case T__25:
			case T__32:
			case T__35:
			case T__67:
			case T__68:
			case T__70:
			case T__76:
			case T__79:
			case T__82:
			case T__83:
			case T__84:
			case T__85:
			case T__86:
			case T__87:
			case T__88:
			case T__89:
			case T__91:
			case BOOLEAN:
			case STRING:
			case FLOAT:
			case INTEGER:
			case IDENTIFIER:
				{
				setState(191);
				expression();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			setState(194);
			statementList();
			setState(195);
			match(T__25);
			setState(196);
			match(T__19);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class WhileLoopContext extends ParserRuleContext {
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public StatementListContext statementList() {
			return getRuleContext(StatementListContext.class,0);
		}
		public WhileLoopContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_whileLoop; }
	}

	public final WhileLoopContext whileLoop() throws RecognitionException {
		WhileLoopContext _localctx = new WhileLoopContext(_ctx, getState());
		enterRule(_localctx, 28, RULE_whileLoop);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(198);
			match(T__26);
			setState(199);
			expression();
			setState(200);
			match(T__27);
			setState(201);
			statementList();
			setState(202);
			match(T__25);
			setState(203);
			match(T__26);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ExitContext extends ParserRuleContext {
		public ExitContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_exit; }
	}

	public final ExitContext exit() throws RecognitionException {
		ExitContext _localctx = new ExitContext(_ctx, getState());
		enterRule(_localctx, 30, RULE_exit);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(205);
			match(T__28);
			setState(206);
			match(T__19);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TellContext extends ParserRuleContext {
		public TellAppContext tellApp() {
			return getRuleContext(TellAppContext.class,0);
		}
		public TellIdContext tellId() {
			return getRuleContext(TellIdContext.class,0);
		}
		public TellContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_tell; }
	}

	public final TellContext tell() throws RecognitionException {
		TellContext _localctx = new TellContext(_ctx, getState());
		enterRule(_localctx, 32, RULE_tell);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(208);
			match(T__29);
			setState(211);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__30:
			case T__31:
				{
				setState(209);
				tellApp();
				}
				break;
			case T__1:
			case T__6:
			case T__16:
			case T__25:
			case T__32:
			case T__35:
			case T__67:
			case T__68:
			case T__70:
			case T__76:
			case T__79:
			case T__82:
			case T__83:
			case T__84:
			case T__85:
			case T__86:
			case T__87:
			case T__88:
			case T__89:
			case T__91:
			case BOOLEAN:
			case STRING:
			case FLOAT:
			case INTEGER:
			case IDENTIFIER:
				{
				setState(210);
				tellId();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TellAppContext extends ParserRuleContext {
		public AppTypeContext appType() {
			return getRuleContext(AppTypeContext.class,0);
		}
		public TerminalNode STRING() { return getToken(ASGrammarParser.STRING, 0); }
		public TellArgContext tellArg() {
			return getRuleContext(TellArgContext.class,0);
		}
		public TellAppContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_tellApp; }
	}

	public final TellAppContext tellApp() throws RecognitionException {
		TellAppContext _localctx = new TellAppContext(_ctx, getState());
		enterRule(_localctx, 34, RULE_tellApp);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(213);
			appType();
			setState(214);
			match(STRING);
			setState(215);
			tellArg();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
